--- a/Landing Page - Healthy Recipes/index.html
+++ b/Landing Page - Healthy Recipes/index.html
@@ -11,12 +11,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Eating for living</title>
+    <title>Healthy</title>
   </head>
   <body>
     <h1>Eating <span>for living</span></h1>
     <p>Your long life start with your intelligent choices</p>
-    <a href="#">Learn More</a>
-    <a href="#" class="btn-primary">Recipes</a>
+    <div>
+      <a href="#">Learn More</a> 
+      <a href="#" class="btn-primary">Recipes</a>
+    </div>
   </body>
 </html>
